[metadata]
name = teststevedore
summary = Test OpenStack stevedore libs
author = Kien Nguyen
author-email = kiennt2609@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    teststevedore

[entry_points]
teststevedore.drivers =
    noop = teststevedore.drivers.noop_driver:NoopDriver
    echo = teststevedore.drivers.echo:EchoDriver
